[package]
name = "jetstreamer-plugin"
description = "Support crate for Jetstreamer containing plugin framework abstractions and utilities"
keywords.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
jetstreamer-firehose.workspace = true

serde.workspace = true
solana-message.workspace = true
solana-pubkey.workspace = true
tokio.workspace = true
log.workspace = true
clickhouse.workspace = true
futures-util.workspace = true
thiserror.workspace = true
sha2.workspace = true
dashmap.workspace = true
carbon-core.workspace = true
carbon-pumpfun-decoder.workspace = true
solana-instruction.workspace = true
solana-transaction-status.workspace = true
solana-signature.workspace = true
solana-program.workspace = true
solana-pubkey-carbon.workspace = true